--- a/google_colab/main.ipynb
+++ b/google_colab/main.ipynb
@@ -47,7 +47,7 @@
    "execution_count": null,
    "source": [
     "# import database from dump\n",
-    "!sudo pg_restore -U emotion_classification -d emotion_classification -h 127.0.0.1 --jobs=4 emotion_classification.dump"
+    "!sudo pg_restore -U emotion_classification -d emotion_classification -h 127.0.0.1 --jobs=8 emotion_classification.dump"
    ],
    "id": "b4ae3e72c9bb215"
   },
@@ -58,7 +58,8 @@
    "execution_count": null,
    "source": [
     "# clone the Barometrs repository\n",
-    "!git clone https://github.com/LUMII-AILab/Barometrs.git"
+    "!git clone https://github.com/LUMII-AILab/Barometrs.git\n",
+    "%cd Barometrs"
    ],
    "id": "dc25a6f446e0dcd6"
   },
@@ -68,8 +69,19 @@
    "outputs": [],
    "execution_count": null,
    "source": [
+    "# install Python dependencies\n",
+    "!pip install -r requirements.dev.txt"
+   ],
+   "id": "61674f69932adcc1"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
     "# execute comment prediction script\n",
-    "!python3 google_colab/predict_comments_script.py"
+    "%run google_colab/predict_comments_script.py"
    ],
    "id": "3625a381e329309"
   },
@@ -80,7 +92,7 @@
    "execution_count": null,
    "source": [
     "# export database to dump\n",
-    "!sudo pg_dump -U emotion_classification -d emotion_classification -Fc -Z 9 -f /tmp/emotion_classification.dump\n",
+    "!sudo pg_dump -U emotion_classification -d emotion_classification -h 127.0.0.1 -Fc -Z 9 -f /tmp/emotion_classification.dump\n",
     "\n",
     "# download dump\n",
     "from google.colab import files\n",
