Adjust database dump instruction

--- a/google_colab/main.ipynb
+++ b/google_colab/main.ipynb
@@ -91,8 +91,8 @@
    "outputs": [],
    "execution_count": null,
    "source": [
-    "# export database to dump\n",
-    "!sudo pg_dump -U emotion_classification -d emotion_classification -h 127.0.0.1 -Fc -Z 9 -f /tmp/emotion_classification.dump\n",
+    "# export database - only the predicted_comments table; no compression\n",
+    "!sudo pg_dump -U emotion_classification -d emotion_classification -h 127.0.0.1 --table predicted_comments -Fc -Z 0 -f /tmp/emotion_classification.dump\n",
     "\n",
     "# download dump\n",
     "from google.colab import files\n",
