Remove testing code. Compress dump before downloading.

--- a/google_colab/main.ipynb
+++ b/google_colab/main.ipynb
@@ -94,9 +94,12 @@
     "# export database - only the predicted_comments table; no compression\n",
     "!sudo pg_dump -U emotion_classification -d emotion_classification -h 127.0.0.1 --table predicted_comments -Fc -Z 0 -f /tmp/emotion_classification.dump\n",
     "\n",
+    "# compress the dump\n",
+    "!gzip /tmp/emotion_classification.dump\n",
+    "\n",
     "# download dump\n",
     "from google.colab import files\n",
-    "files.download('/tmp/emotion_classification.dump')"
+    "files.download(\"/tmp/emotion_classification.dump.gz\")"
    ],
    "id": "3cc084c363dfad91"
   },
